fix : fix overlapped labeling

--- a/UI/assets/widgets/react-perfect-scrollbar/_base.scss
+++ b/UI/assets/widgets/react-perfect-scrollbar/_base.scss
@@ -69,7 +69,9 @@
   border-width: 2px 2px 2px 8px !important;
   padding: 0.1px !important;
   word-break: break-all !important;
-  border-color: darkorange !important;
+  border-color: yellow !important;
+  //background-color: lightgoldenrodyellow !important;
+
   color: black !important;
 }
 .highlight_bg_key:hover{
